# DataMind

./: README.md
server/: .gitignore  README.md  main.py  pyproject.toml
server/src/: enums.py  schemas.py  settings.py  utils.py
web/: README.md  index.html  package.json  pnpm-lock.yaml
web/src/: App.tsx  client.tsx  index.css  utls.tsx
web/src/components/: Button.tsx  Diagnostics.tsx  Form.tsx  Header.tsx  HorizontalMenu.tsx  Icon.tsx  InsightsGraph.tsx  Login.tsx  MenuLayout.tsx  Modal.tsx  Panel.tsx  ProfileCircle.tsx  Table.tsx
